--- a/CookMania/Storyboards/Base.lproj/Main.storyboard
+++ b/CookMania/Storyboards/Base.lproj/Main.storyboard
@@ -190,6 +190,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="4If-GV-7ON"/>
                     </view>
+                    <connections>
+                        <segue destination="oY8-TY-LDq" kind="show" identifier="toRecipeDetails" id="gyG-aW-51a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qi2-34-0dG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -208,6 +211,8 @@
                     <connections>
                         <segue destination="6qe-kK-Ooc" kind="relationship" relationship="viewControllers" id="bam-qi-EaF"/>
                         <segue destination="7Sd-b5-1zf" kind="relationship" relationship="viewControllers" id="exR-gH-P2j"/>
+                        <segue destination="cyx-Y9-j2j" kind="relationship" relationship="viewControllers" id="o5L-K5-AzA"/>
+                        <segue destination="mvd-ic-DP3" kind="relationship" relationship="viewControllers" id="t9d-m8-Efh"/>
                         <segue destination="zya-Nf-PgJ" kind="relationship" relationship="viewControllers" id="MPx-0Z-pby"/>
                     </connections>
                 </tabBarController>
@@ -261,16 +266,17 @@
             </objects>
             <point key="canvasLocation" x="4094" y="1628"/>
         </scene>
-        <!--Blits View Controller-->
+        <!--Blitz View Controller-->
         <scene sceneID="Dtt-bh-hZ1">
             <objects>
-                <viewController id="cyx-Y9-j2j" customClass="BlitsViewController" customModule="CookMania" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="cyx-Y9-j2j" customClass="BlitzViewController" customModule="CookMania" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aTT-WW-9i4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="J1U-Tf-FZt"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" selectedImage="blitz" id="yTe-As-Sh9"/>
                     <connections>
                         <segue destination="oY8-TY-LDq" kind="show" identifier="toRecipeDetails" id="cgg-5p-EjF"/>
                     </connections>
@@ -312,6 +318,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EBz-Iz-orr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1244" y="1699"/>
+        </scene>
+        <!--Community View Controller-->
+        <scene sceneID="GqJ-br-gj2">
+            <objects>
+                <viewController id="mvd-ic-DP3" customClass="CommunityViewController" customModule="CookMania" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yOX-iz-LYu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="0zd-XF-P4M"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" selectedImage="community" id="qeS-Bd-RCO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ac4-tG-Qbe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2423" y="1989"/>
         </scene>
         <!--Add Recipe View Controller-->
         <scene sceneID="TQs-Id-VLw">
@@ -468,14 +490,16 @@
         </scene>
     </scenes>
     <resources>
+        <image name="blitz" width="48" height="48"/>
         <image name="cacciatore" width="420" height="236.25"/>
+        <image name="community" width="48" height="48"/>
         <image name="home" width="72" height="72"/>
         <image name="profile" width="72" height="72"/>
         <image name="search" width="72" height="72"/>
         <image name="shop-cart" width="72" height="72"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="tsZ-Bu-7I5"/>
+        <segue reference="cgg-5p-EjF"/>
         <segue reference="DtB-Bu-ib5"/>
     </inferredMetricsTieBreakers>
 </document>
