--- a/CookMania/Storyboards/Base.lproj/Main.storyboard
+++ b/CookMania/Storyboards/Base.lproj/Main.storyboard
@@ -32,16 +32,136 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="56Q-dV-Vfj">
-                                <rect key="frame" x="145" y="300" width="102" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Login"/>
-                                <connections>
-                                    <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OZC-Zi-FZN"/>
-                                </connections>
-                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-background" translatesAutoresizingMaskIntoConstraints="NO" id="HpZ-6N-klP" userLabel="Background">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GeG-sv-Noq">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.39521897007042256" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jzR-4d-DVe">
+                                <rect key="frame" x="0.0" y="89.5" width="375" height="508"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sTB-yt-FGI" userLabel="Logo">
+                                        <rect key="frame" x="102" y="22" width="171" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="8q8-Bw-j08"/>
+                                            <constraint firstAttribute="width" constant="171" id="XZD-rU-Y3S"/>
+                                        </constraints>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mvM-Uf-uTb" userLabel="LoginFormContainerView">
+                                        <rect key="frame" x="32" y="174" width="312" height="160"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gUR-1C-hn4" userLabel="UserNameTextField">
+                                                <rect key="frame" x="16" y="26" width="281" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="VQZ-4s-K26"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IJO-P1-qKa" userLabel="PasswordTextField">
+                                                <rect key="frame" x="17" y="78" width="280" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="0L8-Xh-HzN"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="la6-02-HoG">
+                                                <rect key="frame" x="137" y="119" width="38" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="Mia-qu-IJA"/>
+                                                </constraints>
+                                                <state key="normal" title="Login"/>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="IJO-P1-qKa" firstAttribute="top" secondItem="gUR-1C-hn4" secondAttribute="bottom" constant="22" id="9ZP-U1-HNG"/>
+                                            <constraint firstAttribute="height" constant="160" id="B9H-ce-zWn"/>
+                                            <constraint firstItem="IJO-P1-qKa" firstAttribute="leading" secondItem="mvM-Uf-uTb" secondAttribute="leading" constant="17" id="GPe-xt-TVg"/>
+                                            <constraint firstAttribute="trailing" secondItem="IJO-P1-qKa" secondAttribute="trailing" constant="15" id="Mpn-pF-b25"/>
+                                            <constraint firstAttribute="trailing" secondItem="gUR-1C-hn4" secondAttribute="trailing" constant="15" id="PhF-kN-hzI"/>
+                                            <constraint firstItem="la6-02-HoG" firstAttribute="centerX" secondItem="mvM-Uf-uTb" secondAttribute="centerX" id="SRn-Wh-8Hp"/>
+                                            <constraint firstItem="gUR-1C-hn4" firstAttribute="top" secondItem="mvM-Uf-uTb" secondAttribute="top" constant="26" id="aLV-Vu-Mv8"/>
+                                            <constraint firstItem="gUR-1C-hn4" firstAttribute="leading" secondItem="mvM-Uf-uTb" secondAttribute="leading" constant="16" id="l1X-ez-ErQ"/>
+                                            <constraint firstItem="la6-02-HoG" firstAttribute="top" secondItem="IJO-P1-qKa" secondAttribute="bottom" constant="11" id="xia-MU-2uY"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or connect with" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Th-Nc-gkO" userLabel="ConnectWithLabel">
+                                        <rect key="frame" x="126.5" y="343" width="122" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="XZm-Bv-GJU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OA8-0z-B3c" userLabel="SocialButtonsContainerView">
+                                        <rect key="frame" x="92.5" y="371" width="190" height="68"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uID-fq-fwK" userLabel="Facebook">
+                                                <rect key="frame" x="0.0" y="12" width="80" height="44"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="44" id="FM0-Q3-Lbb"/>
+                                                    <constraint firstAttribute="width" constant="80" id="o1J-tv-pNe"/>
+                                                </constraints>
+                                                <state key="normal" image="facebook-logo"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XU0-Y0-470" userLabel="Google">
+                                                <rect key="frame" x="110" y="12" width="80" height="44"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="80" id="5OV-1X-jjj"/>
+                                                    <constraint firstAttribute="height" constant="44" id="eRh-kq-AZM"/>
+                                                </constraints>
+                                                <state key="normal" image="google-logo"/>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="uID-fq-fwK" firstAttribute="leading" secondItem="OA8-0z-B3c" secondAttribute="leading" id="33G-sg-T4u"/>
+                                            <constraint firstAttribute="trailing" secondItem="XU0-Y0-470" secondAttribute="trailing" id="OmA-q2-TyH"/>
+                                            <constraint firstAttribute="height" constant="68" id="jkA-Z9-gf9"/>
+                                            <constraint firstItem="XU0-Y0-470" firstAttribute="leading" secondItem="uID-fq-fwK" secondAttribute="trailing" constant="30" id="lOc-Ps-Xaa"/>
+                                            <constraint firstItem="XU0-Y0-470" firstAttribute="top" secondItem="OA8-0z-B3c" secondAttribute="top" constant="12" id="ptf-c4-Ku0"/>
+                                            <constraint firstItem="uID-fq-fwK" firstAttribute="top" secondItem="OA8-0z-B3c" secondAttribute="top" constant="12" id="t42-F9-y7P"/>
+                                            <constraint firstAttribute="width" constant="190" id="xad-JP-h7c">
+                                                <string key="userLabel" base64-UTF8="YES">
+d2lkdGggPSAxNxAyA
+</string>
+                                            </constraint>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="mvM-Uf-uTb" firstAttribute="leading" secondItem="jzR-4d-DVe" secondAttribute="leading" constant="32" id="1oP-3S-ySN"/>
+                                    <constraint firstItem="6Th-Nc-gkO" firstAttribute="centerX" secondItem="jzR-4d-DVe" secondAttribute="centerX" id="Dad-ES-87V"/>
+                                    <constraint firstAttribute="height" constant="508" id="JAJ-4u-pNV"/>
+                                    <constraint firstItem="OA8-0z-B3c" firstAttribute="top" secondItem="6Th-Nc-gkO" secondAttribute="bottom" constant="7" id="WQD-JU-HgN"/>
+                                    <constraint firstItem="sTB-yt-FGI" firstAttribute="top" secondItem="jzR-4d-DVe" secondAttribute="top" constant="22" id="WSc-MS-B68"/>
+                                    <constraint firstItem="6Th-Nc-gkO" firstAttribute="top" secondItem="mvM-Uf-uTb" secondAttribute="bottom" constant="9" id="avd-cU-iOH"/>
+                                    <constraint firstItem="OA8-0z-B3c" firstAttribute="centerX" secondItem="jzR-4d-DVe" secondAttribute="centerX" id="cJq-MO-mRb"/>
+                                    <constraint firstAttribute="trailing" secondItem="mvM-Uf-uTb" secondAttribute="trailing" constant="31" id="euh-VG-NTf"/>
+                                    <constraint firstItem="mvM-Uf-uTb" firstAttribute="top" secondItem="sTB-yt-FGI" secondAttribute="bottom" constant="24" id="r4P-HX-2Yg"/>
+                                    <constraint firstItem="sTB-yt-FGI" firstAttribute="centerX" secondItem="jzR-4d-DVe" secondAttribute="centerX" id="tcS-jm-sTI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="HpZ-6N-klP" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" id="3j2-wD-ncu"/>
+                            <constraint firstItem="HpZ-6N-klP" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="OcL-bD-VUI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jzR-4d-DVe" secondAttribute="trailing" id="PFG-mS-tNK"/>
+                            <constraint firstItem="GeG-sv-Noq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="SxA-LT-J43"/>
+                            <constraint firstItem="HpZ-6N-klP" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="ZIu-el-j9c"/>
+                            <constraint firstItem="jzR-4d-DVe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="a2N-OG-wfd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GeG-sv-Noq" secondAttribute="trailing" id="ahA-uF-BlE"/>
+                            <constraint firstItem="GeG-sv-Noq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bjL-ii-VHa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="GeG-sv-Noq" secondAttribute="bottom" id="fhn-po-lXd"/>
+                            <constraint firstItem="HpZ-6N-klP" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="hey-HF-hCy"/>
+                            <constraint firstItem="jzR-4d-DVe" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="nAt-PV-E3D"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="Fb4-VJ-3Uy"/>
@@ -493,7 +613,10 @@
         <image name="blitz" width="48" height="48"/>
         <image name="cacciatore" width="420" height="236.25"/>
         <image name="community" width="48" height="48"/>
+        <image name="facebook-logo" width="54" height="54"/>
+        <image name="google-logo" width="54" height="54"/>
         <image name="home" width="72" height="72"/>
+        <image name="login-background" width="533" height="800"/>
         <image name="profile" width="72" height="72"/>
         <image name="search" width="72" height="72"/>
         <image name="shop-cart" width="72" height="72"/>
